fix overflow of msg

--- a/public_html/static/css/style.css
+++ b/public_html/static/css/style.css
@@ -774,6 +774,9 @@ body[data-sidebar] #sidebar{left:0;}
 	background-color: #f5f5f5;
 	background-position: -320px -350px;
 }
+.pageData .msg{
+	overflow:hidden;
+}
 
 .pageData .postPreview{}
 .pageData .postPreview img.thumb{width:300px;height:auto;display:inline-block;margin:0 auto;padding:0;margin:0.5em;border:1px solid transparent;transition:0.3s}
